<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".activitys.ConsultaCodigoActivity">

    <LinearLayout
        android:id="@+id/LinearLayout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_items"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/edtCProducto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/custom_buttonsec"
            android:ems="10"
            android:hint="@string/codigoProducto"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="18sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/buttonConsulta"
            android:onClick="onClickConsultar"
            android:text="@string/consultar"
            android:textColor="@color/BlancoSecuandario"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/viewId"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/viewNombre"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtExistencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/viewExistencia"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/np"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/def1"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/buttonConsulta"
            android:enabled="false"
            android:onClick="onClickAgregar"
            android:text="@string/agregar"
            android:textColor="@color/BlancoSecuandario"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</RelativeLayout>
