<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.ConsultaNombreActivity">

    <LinearLayout
        android:id="@+id/LinearLayout_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/edtnProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/nombreProducto"
            android:inputType="text"
            android:textColor="@color/VerdePrimario"
            android:textColorHint="@color/VerdePrimario"
            android:textSize="18sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:onClick="onClickConsultar"
            android:text="@string/consultar"
            android:textColor="@color/BlancoSecuandario"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/viewId"
            android:textColor="@color/VerdePrimario"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/viewNombre"
            android:textColor="@color/VerdePrimario"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtExistencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/viewExistencia"
            android:textColor="@color/VerdePrimario"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/np"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/def1"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:enabled="false"
            android:onClick="onClickAgregar"
            android:text="@string/agregar"
            android:textColor="@color/BlancoSecuandario"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</RelativeLayout>