<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.ModificarActivity">

    <LinearLayout
        android:id="@+id/LinearLayout_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/mtxtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/viewId"
            android:textColor="@color/VerdePrimario"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mtxtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/viewNombre"
            android:textColor="@color/VerdePrimario"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mtxtExistencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/cambiarExistencia"
            android:textColor="@color/VerdePrimario"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/mnp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/def1"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:onClick="onClickGuardar"
            android:text="@string/modificarProducto"
            android:textColor="@color/BlancoSecuandario"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</RelativeLayout>